third_party/move/move-compiler-v2/tests/checking/basic.exp

Diagnostics:
error: expected `u64` but found `address` in expression
  ┌─ tests/checking/basic.move:2:22
  │
2 │     fun foo(): u64 { @22 }
  │                      ^^^
