third_party/move/move-compiler-v2/tests/checking/basic.move
// experiment: check-only
module 0x1::basic {
    fun foo(): u64 { @22 }
}
